@@ -1,3 +1,9 @@
+2006-12-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/lang/management/ManagementFactory.java:
+	(newPlatformMXBeanProxy(MBeanServerConnection,
+	String, Class<T>)): Initial implementation.
+	
 2006-12-17  Tom Tromey  <tromey@redhat.com>
 
 	* javax/naming/spi/Resolver.java: Fixed comments and imports.
